pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "myapp"
  namespace: default
  labels:
    app: "myapp"
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      requests:
        memory: "128Mi"
        cpu: 100m
      limits:
        memory: "256Mi"
        cpu: 1
    ports:
    - containerPort: 80
