sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: myapp
  serviceName: "myapp"
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx
        ports:
        - containerPort: 80
          name: myapp
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      storageClassName: my-storage-class
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
