service.yml
apiVersion: v1
kind: Service
metadata:
  name: myjob
  namespace: default
spec:
  selector:
    app: myjob
  type: ClusterIP
  ports:
  - name: myjob
    protocol: TCP
    port: 80
    targetPort: 80
---
