ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myjob
  namespace: default
spec:
  rules:
  - host: ajendra.xyz(Domain name)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myjob
            port:
              number: 80
---
